Fixed the Drop-Down alignment and Button Design

--- a/css/main.scss
+++ b/css/main.scss
@@ -21,7 +21,6 @@ $slider-height: 248px;
 * {
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 16px;
-  padding: 0;
   margin: 0;
 }
 
@@ -1699,10 +1698,10 @@ ul {
 .cta {
   width: auto;
   margin: 24px 0 !important;
-  padding-left: 24px;
+  //padding-left: 24px;
   border-radius: 4px;
   border-left: 1px solid var(--app-sidebar-border-color);
-  margin-bottom: 40px;
+  //margin-bottom: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1796,9 +1795,8 @@ ul {
   }
 }
 fieldset {
-  width: 80%;
-  margin: 0 auto;
   border: none;
+  padding: 0rem;
 
   input[type="text"] {
     width: 60%;
@@ -1857,11 +1855,11 @@ fieldset {
   }
 }
 textarea {
-  width: calc(100% - 16px);
+  width: 100%;
   min-height: 119px;
-  padding: 10px;
   border-radius: 4px;
   border: solid 1px #d6dadb;
+  margin-top: 1.5rem;
 }
 
 .json-btn-wrapper {
@@ -2051,7 +2049,7 @@ button {
   flex-direction: column;
 }
 .doc-content {
-  padding: 105px 0 80px;
+  padding: 105px 120px 80px;
   display: flex;
   justify-content: center;
   min-height: 95vh;
@@ -2575,6 +2573,7 @@ pre {
   &-page-wrapper {
     display: flex;
     width: 95%;
+    gap:2rem;
 
     @media (max-width: 480px) {
       width: 100%;
@@ -2594,8 +2593,6 @@ pre {
     .playground-box {
       border-radius: 6px;
       border: none;
-      padding: 24px 24px 82px 24px;
-      margin-bottom: 40px;
       position: relative;
 
       #playground-console {
@@ -2656,7 +2653,7 @@ pre {
 
       textarea {
         min-height: 200px;
-        padding: 10px 12px;
+        //@debug: 10px 12px;
         border: 1px solid #D6DADB;
         border-radius: 4px;
         color: #5D5381;
@@ -2673,18 +2670,20 @@ pre {
       flex-wrap: nowrap;
       border-radius: 4px;
       background-color: #f8fafb;
-      padding: 0px 24px;
-      margin-bottom: 48px;
+      padding: 0rem 2rem 0rem 0.5rem;
+      //margin-bottom: 48px;
       margin-top: 16px;
+      justify-content: space-between;
+      box-sizing: border-box;
+      gap:1rem;
+      
 
       fieldset {
         display: flex;
         flex-wrap: nowrap;
         align-items: center;
-        margin-right: 24px;
-        margin: 0 24px 0 0;
         justify-content: flex-start;
-        min-width: calc(60% + 10px);
+        min-width: calc(60% );
 
         input[type="text"] {
           border: 1px solid #D6DADB;
@@ -2707,8 +2706,8 @@ pre {
         flex-direction: column;
         flex-wrap: nowrap;
         font-size: 14px;
-        width: 70%;
         margin-bottom: unset;
+        white-space: nowrap;
 
         .title {
           font-weight: bold;
@@ -2737,6 +2736,9 @@ pre {
     display: flex;
     flex-direction: column;
     width: 50%;
+    @media(max-width:1440) {
+      padding-left: 25px;
+    }
   }
 
   fieldset {
